styles.css
/* Universal, Root, and HTML */

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
}

:root {
  --backgroundgrey: #ecf0f1;
  --lightblue: #7d9de1;
  --goldenorange: #e1c17d;
  --navychar: #2c3e50;
  --darkblue: #4f6a9b;
  --pinkpurp: #e3b9ed;
}

html {
  background-color: var(--backgroundgrey);
}


/* Header Section */

.navbar {
  background: var(--navychar);
  border-radius: 10px;
  height: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  position: sticky;
  top: 0;
  z-index: 999;
  margin: 15px;
  padding: 0 10px;
}

.navbar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  z-index: 1;
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
  padding: 0 50px;
}

#navbar-img {
  max-height: 60px;
}

.navbar-menu {
  display: flex;
  align-items: center;
  list-style: none;
}

.navbar-item {
  height: 80px;
}

.navbar-link {
  color: var(--backgroundgrey);
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  height: 100%;
  width: 100px;
  transition: all 0.3s ease;
}

.navbar-link:hover {
  color: var(--pinkpurp);
  transition: all 0.3s ease;
}

@media screen and (max-width: 1100px) {
  .navbar-container {
    display: flex;
    justify-content: space-between;
    height: 80px;
    z-index: 1;
    width: 100%;
    max-width: 1300px;
    padding: 0;
  }

  .navbar-menu {
    display: grid;
    grid-template-columns: auto;
    margin: 0;
    width: 100%;
    position: absolute;
    top: -1000px;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: -1;
  }

  .navbar-menu.active {
    background: var(--navychar);
    top: 100%;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: 99;
    height: 60vh;
    font-size: 1.6rem;
    border-radius: 10px;
    width: 100%;
    right: .2px;
    }

  .navbar-img {
    padding-left: 25px;
  }

  .navbar-toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
    background: #fff;
  }

  .navbar-item {
    width: 100%
  }

  .navbar-link {
    text-align: center;
    padding: 2rem;
    width: 100%;
    display: table;
  }

  #mobile-menu {
    position: absolute;
    top: 20%;
    right: 5%;
    transform: translate(5%, 20%);
  }

  .navbar-toggle .bar {
    display: block;
    cursor: pointer;
  }

  #mobile-menu.is-active .bar:nth-child(2) {
    opacity: 0;
  }

  #mobile-menu.is-active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  #mobile-menu.is-active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

/* Main Sections */

#about-page, #products-page, #contact-page {
  height: 100dvh;
  margin: 15px;
  border-radius: 10px;
  position: relative;
}

/* Section 1 */

#about-page {
  background-color: var(--pinkpurp);
}

.sec1-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.top-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  text-align: center;
  height: 40vh;
  width: 100%;
  margin-top: 15vh;
}

.bottom-container {
  display: flex;
  align-items: flex-end;
  justify-content: space-evenly;
  text-align: center;
  height: 40vh;
  width: 100%;
  margin-bottom: 15vh;
}

.sec1-header {
  font-size: 2.5rem;
  font-weight: bold;
  height: auto;
  width: 50vw;
}

.sec1-subtitle {
  font-size: 1.25rem;
  display: block;
  font-style: italic;
  font-weight: normal;
}

.img-container {
  width: 50vw;
  height: 40vh;
  align-self: center;
}

.sec1-img {
  max-width: 50vw;
  max-height: 40vh;
  height: auto;
  width: auto;
  border-radius: 30px;
}

.sec1-img-caption {
  height: auto;
  width: 30vw;
  align-self: center;
}

.caption-container {
  width: 50vw;
  display: flex;
  justify-content: center;
}

.text-container {
  width: 50vw;
  display: flex;
  justify-content: center;
}

.sec1-text {
  height: auto;
  width: 30vw;
  margin: 0 auto;
}

@media screen and (max-width: 1100px) {
  .sec1-container, .top-container, .bottom-container {
    display: grid;
    grid-template-columns: 1fr;
    align-items: center;
    justify-content: space-around;
    margin: 0 auto;
    width: 100%;
    height: 100%;
  }

 .img-container, .caption-container, .text-container, .sec1-header { 
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100%;
    width: 100%;
  }

  .sec1-text {
    width: 50%;
  }

  .sec1-img-caption {
    width: 50%;
    margin-bottom: 20px;
  }

  .sec1-header {
    width: 100%;
    height: 80%;
    margin-top: 20px;
    font-size: 1.8rem;
  }
}

/* Section 2 */
#products-page {
  background-color: var(--lightblue);
}

.sec2-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}

.container {
display: flex;
flex-direction: column;
align-items: center;
text-align: center;
line-height: 2rem;
overflow-y: auto;
}

.sec2-header {
font-size: 2.5rem;
font-weight: bold;
}

.sec2-img {
max-width: 50vw;
max-height: 50vh;
width: auto;
height: auto;
margin: 1rem;
}

.sec2-ul {
list-style-type: none;
}

hr {
width: 100%;
height: 2px;
background-color: var(--pinkpurp);
border: none;
}
/* Section 3 */

#contact-page {
  background-color: var(--pinkpurp);
}

.sec3-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 75vw;
  text-align: center;
  line-height: 2rem;
}

video {
  width: 100%;
}


/* Top Button */
#top1, #top2, #top3 {
  position: absolute;
  bottom: 30px;
  right: 30px;
  text-decoration: none;
  color: var(--backgroundgrey);
  font-size: 1.6rem;
  padding: 10px;
}

#top1, #top3 {
  background-color: var(--darkblue);
  border-radius: 30px;
}

#top2 {
  background-color: var(--pinkpurp);
  border-radius: 30px;
}


#top1:hover, #top3:hover {
  color: var(--pinkpurp);
  border-radius: 30px;
}

#top2:hover {
  color: var(--darkblue);
  border-radius: 30px;
}

@media screen and (max-width: 1100px) {
  #top1, #top2, #top3 {
    font-size: 1.2rem;
  }
}

/* Footer */

footer p {
  color: var(--backgroundgrey);
  text-align: center;
  margin: 0 auto;
}

#footer {
  background-color: var(--navychar);
  border-radius: 10px;
  color: var(--backgroundgrey);
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 15px;
  height: 80px;
  padding: 0 20px;
}

.foot-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  z-index: 1;
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
  padding: 0 50px;
}

